[gd_scene load_steps=10 format=3 uid="uid://bt27hqupm2wyu"]

[ext_resource type="Shader" path="res://scenes/objects/shake.gdshader" id="1_7lykd"]
[ext_resource type="Texture2D" uid="uid://ciruqobqw07ub" path="res://assets/game/objects/basic_grass_biom_things.png" id="1_fj3cc"]
[ext_resource type="PackedScene" uid="uid://b3e63p1lobby6" path="res://scenes/components/HurtComponent.tscn" id="2_mm0qe"]
[ext_resource type="Script" path="res://scenes/objects/rocks/rock.gd" id="2_rb41k"]
[ext_resource type="PackedScene" uid="uid://bnlcdyhu8nhr3" path="res://scenes/components/DamageComponent.tscn" id="3_phn7j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qewpy"]
resource_local_to_scene = true
shader = ExtResource("1_7lykd")
shader_parameter/shake_intensity = 0.0
shader_parameter/shake_speed = 20.0

[sub_resource type="AtlasTexture" id="AtlasTexture_6hx18"]
atlas = ExtResource("1_fj3cc")
region = Rect2(128, 18, 16, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_8ao1u"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nc7xe"]
radius = 9.0

[node name="Rock" type="Sprite2D"]
material = SubResource("ShaderMaterial_qewpy")
texture = SubResource("AtlasTexture_6hx18")
script = ExtResource("2_rb41k")

[node name="DamageComponent" parent="." instance=ExtResource("3_phn7j")]
max_damage = 4

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_8ao1u")

[node name="HurtComponent" parent="." instance=ExtResource("2_mm0qe")]
tool = 1

[node name="HurtCollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
shape = SubResource("CircleShape2D_nc7xe")
debug_color = Color(0.98084, 0, 0.376241, 0.42)

[connection signal="max_damage_reached" from="DamageComponent" to="." method="on_max_damage_reached"]
[connection signal="hurt" from="HurtComponent" to="." method="_on_hurt"]
